--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>Food Recipe Web App</title>
     <link rel="stylesheet" href="/styles/styles.css">
     <link rel="stylesheet" href="/styles/large.css">
@@ -18,7 +18,7 @@
           <ul class="nav-links">
             <li><a href="/index.html" class="nav-link">Recipes</a></li>
             <li>
-              <a href="/articles/articles.html" class="nav-link">Articles</a>
+              <a href="articles.html" class="nav-link">Articles</a>
             </li>
             <li>
               <a href="/about/about_us.html" class="nav-link">About Us</a>
