--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <ul class="nav-links">
             <li><a href="/index.html" class="nav-link">Recipes</a></li>
             <li>
-              <a href="articles.html" class="nav-link">Articles</a>
+              <a href="/articles/articles.html" class="nav-link">Articles</a>
             </li>
             <li>
               <a href="/about/about_us.html" class="nav-link">About Us</a>
@@ -33,7 +33,7 @@
     <footer class="footer">
       <div class="container">
         <p>&copy; 2023 Food Recipe Web App</p>
-        <p>Data provided by <a href="https://spoonacular.com">spoonacular Recipies</a></p>
+        <p>Data provided by <a href="https://edamam.com">Edamam Recipies</a></p>
       </div>
     </footer>
   </body>
