--- a/about/about_us.html
+++ b/about/about_us.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Food Recipe Web App - About Us</title>
-    <link rel="stylesheet" href="/styles/styles.css">
-    <link rel="stylesheet" href="/styles/large.css">
-    <link rel="stylesheet" href="/styles/medium.css">
-    <link rel="stylesheet" href="/styles/normalize.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/large.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="icon" type="image/x-icon" href="uploads/favicon.ico">
     <script src="/js/about.js" defer></script>
 </head>
