--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Food Recipe Web App</title>
-    <link rel="stylesheet" href="/styles/styles.css">
-    <link rel="stylesheet" href="/styles/large.css">
-    <link rel="stylesheet" href="/styles//medium.css">
-    <link rel="stylesheet" href="/styles/normalize.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/large.css">
+    <link rel="stylesheet" href="styles//medium.css">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="icon" type="image/x-icon" href="uploads/favicon.ico">
     <script src="/js/main.js"></script>
   </head>
