--- a/about/about_us.html
+++ b/about/about_us.html
@@ -18,9 +18,9 @@
             <div class="container">
                 <h1 class="logo">Food Recipes</h1>
                 <ul class="nav-links">
-                    <li><a href="/index.html" class="nav-link">Recipes</a></li>
-                    <li><a href="/articles/articles.html" class="nav-link">Articles</a></li>
-                    <li><a href="/about/about_us.html" class="nav-link">About Us</a></li>
+                    <li><a href="index.html" class="nav-link">Recipes</a></li>
+                    <li><a href="articles/articles.html" class="nav-link">Articles</a></li>
+                    <li><a href="about/about_us.html" class="nav-link">About Us</a></li>
                 </ul>
             </div>
         </nav>
