--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles//medium.css">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="icon" type="image/x-icon" href="uploads/favicon.ico">
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
   </head>
   <body>
     <header>
