--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
           <ul class="nav-links">
             <li><a href="index.html" class="nav-link">Recipes</a></li>
             <li>
-              <a href="articles/articles.html" class="nav-link">Articles</a>
+              <a href="articles.html" class="nav-link">Articles</a>
             </li>
             <li>
-              <a href="about/about_us.html" class="nav-link">About Us</a>
+              <a href="about_us.html" class="nav-link">About Us</a>
             </li>
           </ul>
         </div>
