--- a/about_us.html
+++ b/about_us.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="icon" type="image/x-icon" href="uploads/favicon.ico">
-    <script src="/js/about.js" defer></script>
+    <script src="js/about.js" defer></script>
 </head>
 
 <body>
@@ -19,8 +19,8 @@
                 <h1 class="logo">Food Recipes</h1>
                 <ul class="nav-links">
                     <li><a href="index.html" class="nav-link">Recipes</a></li>
-                    <li><a href="articles/articles.html" class="nav-link">Articles</a></li>
-                    <li><a href="about/about_us.html" class="nav-link">About Us</a></li>
+                    <li><a href="articles.html" class="nav-link">Articles</a></li>
+                    <li><a href="about_us.html" class="nav-link">About Us</a></li>
                 </ul>
             </div>
         </nav>
