--- a/articles.html
+++ b/articles.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="icon" type="image/x-icon" href="uploads/favicon.ico">
-    <script type="module" src="/js/recipe.js"></script>
+    <script type="module" src="js/recipe.js"></script>
   </head>
 
   <body>
@@ -17,12 +17,12 @@
         <div class="container">
           <h1 class="logo">Food Recipes</h1>
           <ul class="nav-links">
-            <li><a href="/index.html" class="nav-link">Recipes</a></li>
+            <li><a href="index.html" class="nav-link">Recipes</a></li>
             <li>
-              <a href="/articles/articles.html" class="nav-link">Articles</a>
+              <a href="articles.html" class="nav-link">Articles</a>
             </li>
             <li>
-              <a href="/about/about_us.html" class="nav-link">About Us</a>
+              <a href="about_us.html" class="nav-link">About Us</a>
             </li>
           </ul>
         </div>
